fix: add spacing between autocomplete action buttons

--- a/src/components/Questions/AutoComplete/AutoComplete.module.css
+++ b/src/components/Questions/AutoComplete/AutoComplete.module.css
@@ -11,6 +11,10 @@
   margin-top: 24px;
 }
 
+.buttonContainer > * {
+  margin: 10px;
+}
+
 .imageContainer {
   padding: 1em;
   text-align: center;
